noticed an issue with the nav overlapping the header on small screen sizes. Added more padding-top to the body to fix.

--- a/fincalc/static/style.css
+++ b/fincalc/static/style.css
@@ -13,7 +13,7 @@
 body {
 
     background-image: linear-gradient( hsl(28, 9%, 72%), #f9f8f7);
-    padding-top: 8rem;
+    padding-top: 9.75rem;
     padding-bottom: 30rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
@@ -22,7 +22,7 @@ body {
 
  header, main, .flash, nav ul, .hero, .mobileButtonDiv, footer p {
 
-    max-width: 80%;
+    max-width: 72%;
     margin: 0.5rem auto 0.5rem auto;
 
 }
@@ -86,7 +86,7 @@ h1, h2, h3 {
         justify-content:  center;
         align-items: center;
         gap: 2rem;
-        margin-top: 4rem;
+        margin-top: 2rem;
 
     }
 
@@ -203,6 +203,10 @@ footer {
          display: flex;
          gap: 1rem;
     }
+
+    .headerMain {
+    padding: 3rem;
+}
    .flexItem {
         flex: 1 1 0px;
     }
@@ -236,9 +240,10 @@ footer {
 
 /* end media queries */
 
+/* Main page styles */
+
 
 /* calculator form styles */
-
 
 .form {
     margin-bottom: 1rem;
